# 23-5-team9-server

./: .env.dev.example  .env.example  .env.local.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  check_regions.py  docker-compose.yml  index.html  menu.sh  parse_regions.py  pyproject.toml  requirements.txt  seed_regions.py  test_chat.html
.github/: pull_request_template.md
.github/workflows/: deploy.yml  publish-ghcr.yml
app/: main.py
carrot/: api.py  main.py  settings.py
carrot/app/auction/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py  utils.py
carrot/app/auth/: exceptions.py  models.py  repositories.py  router.py  services.py  settings.py  utils.py
carrot/app/category/: models.py
carrot/app/chat/: chat_manager.py  exceptions.py  manager.py  models.py  router.py  schemas.py  services.py  utils.py  websocket.py
carrot/app/chat_message/: models.py
carrot/app/chat_room/: models.py
carrot/app/image/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
carrot/app/pay/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
carrot/app/product/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
carrot/app/region/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
carrot/app/user/: models.py  (+5 more)
carrot/common/: exceptions.py
carrot/data/: create_region_data.py  regions.json
carrot/db/: connection.py  settings.py
deploy/: docker-compose.yml
nginx/: fastapi.conf  nignx.conf
(+40 files in other folders)
